# hialt-cli

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXECUTION_TRACE.md  LOGGING.md  PROVIDERS.md  ROADMAP.md
src/hialt/: cli.py  errors.py  events.py  execution_trace.py  logging_config.py  settings.py  state.py
src/hialt/agents/: coder.py  critic.py  graph.py  planner.py  verifier.py
src/hialt/llm/: client.py
src/hialt/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py
src/hialt/tools/: __init__.py  runner.py
tests/: test_agents.py  test_critic_parsing.py  test_execution_trace.py  test_graph.py  test_providers.py  test_scratch_toolrunner.py  test_tool_runner.py  test_verifier.py
