[project]
name = "hialt-cli"
version = "0.1.0"
description = "Plan-Execute-Verify agent CLI with LangGraph orchestration"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "typer",
    "pydantic>=2",
    "rich",
    "anthropic",
    "requests",
    "json-repair",
]

[project.scripts]
hialt = "hialt.cli:app"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hialt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
